--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -154,70 +154,7 @@
 	featureJSON.complete(function() {
 		console.log( "second complete" );
 		
-		var mu = parseFloat(winMean) || 5;
-		var sd = parseFloat(winStd) || 2;
-		var mu2 = parseFloat(loseMean) || 3;
-		var sd2 = parseFloat(loseStd) || 1.5;
 
-		ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
-		ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2));
-		ixRange = ixMax-ixMin;
-		ixInc = ixRange/100;
-
-
-		function normalDist() {
-
-
-			var iy = [];
-			iy2 = [];
-	
-	
-			for (var i = ixMin; i < ixMax; i+= ixInc) {
-		
-				iy.push({x: i, y: (1/(sd*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu,2)/(2*Math.pow(sd,2)))});
-				iy2.push({x: i, y: (1/(sd2*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu2,2)/(2*Math.pow(sd2,2)))});
-		
-			}
-	
-	
-			return [
-			{
-				values: iy,
-				key: 'Winning Distribution',
-				color: '#00cc00'
-			},
-			{
-				values: iy2,
-				key: 'Losing Distribution',
-				color: '#ff0000'
-			}
-			];
-	
-		}
-		
-		
-		nv.addGraph(function() {  
-			var chart = nv.models.lineChart();
-			chart.xAxis
-			.axisLabel(featureName)
-			.tickFormat(d3.format(',r'));
-
-			chart.yAxis
-			.axisLabel('Frequency')
-			.tickFormat(d3.format('.02f'));
- 
-			d3.select('#chart svg')
-			.datum(normalDist())
-			.transition().duration(500)
-			.call(chart);
-
-			nv.utils.windowResize(function() { d3.select('#chart svg').call(chart) });
-
-			return chart;
-		});
-		
-		
-	
 	});
 	
 	
@@ -262,8 +199,28 @@ function initDataTables(){
 	
 $(document).ready(function(){
 	
-initDataTables();
-/* all other page load code*/
+	initDataTables();
+	/* all other page load code*/
+
+	nv.addGraph(function() {  
+		var chart = nv.models.lineChart();
+		chart.xAxis
+		.axisLabel(featureName)
+		.tickFormat(d3.format(',r'));
+
+		chart.yAxis
+		.axisLabel('Frequency')
+		.tickFormat(d3.format('.02f'));
+ 
+		d3.select('#chart svg')
+		.datum(normalDist())
+		.transition().duration(500)
+		.call(chart);
+
+		nv.utils.windowResize(function() { d3.select('#chart svg').call(chart) });
+
+		return chart;
+	});
 
 });
 
@@ -294,93 +251,77 @@ initDataTables();
 
 
  
-// function sinAndCos() {
-// 	var sin = [],
-// 	cos = [];
-// 
-// 	for (var i = 0; i < 100; i++) {
-// 		sin.push({x: i, y: Math.sin(i/10)});
-// 		cos.push({x: i, y: .5 * Math.cos(i/10)});
-// 	}
-//  
-// 	return [
-// 	{
-// 		values: sin,
-// 		key: 'Winning Distribution',
-// 		color: '#00cc00'
-// 	},
-// 	{
-// 		values: cos,
-// 		key: 'Losing Distribution',
-// 		color: '#ff0000'
-// 	}
-// 	];
-// }
+function sinAndCos() {
+	var sin = [],
+	cos = [];
 
-// var mu = parseFloat(winMean) || 5;
-// var sd = parseFloat(winStd) || 2;
-// var mu2 = parseFloat(loseMean) || 3;
-// var sd2 = parseFloat(loseStd) || 1.5;
-// 
-// ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
-// ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2));
-// ixRange = ixMax-ixMin;
-// ixInc = ixRange/100;
-// 
-// 
-// function normalDist() {
-// 
-// 
-// 	var iy = [];
-// 	iy2 = [];
-// 	
-// 	
-// 	for (var i = ixMin; i < ixMax; i+= ixInc) {
-// 		
-// 		iy.push({x: i, y: (1/(sd*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu,2)/(2*Math.pow(sd,2)))});
-// 		iy2.push({x: i, y: (1/(sd2*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu2,2)/(2*Math.pow(sd2,2)))});
-// 		
-// 	}
-// 	
-// 	
-// 	return [
-// 	{
-// 		values: iy,
-// 		key: 'Winning Distribution',
-// 		color: '#00cc00'
-// 	},
-// 	{
-// 		values: iy2,
-// 		key: 'Losing Distribution',
-// 		color: '#ff0000'
-// 	}
-// 	];
-// 	
-// }
+	for (var i = 0; i < 100; i++) {
+		sin.push({x: i, y: Math.sin(i/10)});
+		cos.push({x: i, y: .5 * Math.cos(i/10)});
+	}
+ 
+	return [
+	{
+		values: sin,
+		key: 'Winning Distribution',
+		color: '#00cc00'
+	},
+	{
+		values: cos,
+		key: 'Losing Distribution',
+		color: '#ff0000'
+	}
+	];
+}
+
+var mu = parseFloat(winMean) || 5;
+var sd = parseFloat(winStd) || 2;
+var mu2 = parseFloat(loseMean) || 3;
+var sd2 = parseFloat(loseStd) || 1.5;
+
+ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
+ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2));
+ixRange = ixMax-ixMin;
+ixInc = ixRange/100;
 
 
+function normalDist() {
 
-// var topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
 
-// nv.addGraph(function() {  
-// 	var chart = nv.models.lineChart();
-// 	chart.xAxis
-// 	.axisLabel(featureName)
-// 	.tickFormat(d3.format(',r'));
-// 
-// 	chart.yAxis
-// 	.axisLabel('Frequency')
-// 	.tickFormat(d3.format('.02f'));
-//  
-// 	d3.select('#chart svg')
-// 	.datum(normalDist())
-// 	.transition().duration(500)
-// 	.call(chart);
-// 
-// 	nv.utils.windowResize(function() { d3.select('#chart svg').call(chart) });
-// 
-// 	return chart;
-// });
+	var iy = [];
+	iy2 = [];
+	
+	
+	for (var i = ixMin; i < ixMax; i+= ixInc) {
+		
+		iy.push({x: i, y: (1/(sd*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu,2)/(2*Math.pow(sd,2)))});
+		iy2.push({x: i, y: (1/(sd2*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu2,2)/(2*Math.pow(sd2,2)))});
+		
+	}
+	
+	
+	return [
+	{
+		values: iy,
+		key: 'Winning Distribution',
+		color: '#00cc00'
+	},
+	{
+		values: iy2,
+		key: 'Losing Distribution',
+		color: '#ff0000'
+	}
+	];
+	
+}
+
+
+
+var topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
+
+
+
+
 
 
 
