--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -132,8 +132,8 @@
 					numWin.push(blob[9]);
 					healthMean.push(blob[10]);
 					// 
-					console.log("Losing mean = " + loseMean);
-					console.log("Winning mean = " + winMean);
+					// console.log("Losing mean = " + loseMean);
+					// console.log("Winning mean = " + winMean);
 				}
 			
 	
@@ -157,8 +157,8 @@
 					numWin.push(blob[9]);
 					healthMean.push(blob[10]);
 					// 
-					console.log("Losing mean = " + loseMean);
-					console.log("Winning mean = " + winMean);
+					// console.log("Losing mean = " + loseMean);
+				// 	console.log("Winning mean = " + winMean);
 				}
 			
 	
