--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -401,6 +401,12 @@
 					  <option class="divider">-------------------------</option>
 				  </select>
 			  </form>
+			  <form class="navbar-form navbar-left" role="search">
+			    <div class="form-group">
+			      <input type="text" class="form-control" placeholder="Search">
+			    </div>
+			    <button type="submit" class="btn btn-default">Search for feature</button>
+			  </form>
 
 				  <button onclick="doStuff()" type="submit" class="btn btn-primary" id="submitUrl">
 
