--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -320,6 +320,11 @@
 			}
 
 		}
+		
+		function doSearch(){
+			var featElement = document.getElementById("inputFeature");
+			
+		}
 	
 		</script>
 
@@ -396,6 +401,13 @@
 
 				<div class="form-group">
 	  
+					<input type="text" class="form-control" placeholder="Type feature name" id="inputFeature">
+					<span class="input-group-btn">
+						<button class="btn btn-default" onclick="doSearch()" type="submit">
+							Search
+						</button>
+					</span>
+	  
 					<form id="dropdownFeature">
 						<select id="selectFeat">
 							<option>Select feature or StatSEO</option>
@@ -404,13 +416,10 @@
 							<option class="divider">-------------------------</option>
 						</select>
 					</form>
-					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Type feature name">
-						<span class="input-group-btn">
-							<button class="btn btn-default" type="button">Go!</button>
-						</span>
-					</div><!-- /input-group -->
+	
 				</div><!-- /form-group -->
+
+				<br><br>
 
 				<button onclick="doStuff()" type="submit" class="btn btn-primary" id="submitUrl">
 
