--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -323,7 +323,7 @@
 		
 		function doSearch(){
 			var featElement = document.getElementById("inputFeature");
-			
+			alert('Search feature not yet working - please select from the dropdown')
 		}
 	
 		</script>
