Disable neutral option graph

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -403,7 +403,7 @@
 	  
 				<input type="text" class="form-control" placeholder="Type feature name" id="inputFeature">
 				<span class="input-group-btn">
-					<button class="btn btn-default" onclick="doSearch()" type="submit">
+					<button class="btn btn-default" onclick="doSearch()" type="submit" id="submitFeat">
 						Search
 					</button>
 				</span>
