updated table contents

--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -304,7 +304,7 @@ function initDataTables(){
 	{"bVisible": false},	// winning  stdev	
 	null, // number of harmful URLs
 	{"bVisible": false}, // harmful group feature mean
-	{"bVisible": false}, // harmful group StatSEO figure
+	{"bVisible": false}, // harmful group avg SQ
 	{"bVisible": false}, // number of healthy URLs
 	{"bVisible": false}, // healthy group feature mean
 	{"bVisible": false} // healthy group StatSEO figure
@@ -344,10 +344,10 @@ dataTableTwo = $('#example3b').dataTable( {
 	{"bVisible": false},// winning  stdev	 
 	{"bVisible": false}, // number of harmful URLs
 	{"bVisible": false}, // harmful group feature mean
-	{"bVisible": false}, // harmful group StatSEO figure
+	{"bVisible": false}, // harmful group average SQ
 	null, // number of healthy URLs
 	{"bVisible": false}, // healthy group feature mean
-	{"bVisible": false} // healthy group StatSEO figure
+	{"bVisible": false} // healthy group average SQ
 	]
 } );
 
@@ -568,14 +568,16 @@ redrawGraph = function(file) {
 										<tr>
 											<th width="5%">Influence rank</th>
 											<th width="55%">Feature</th>
-											<th width="5%">Average losing mean</th> 
-											<th width="5%">Average winning mean</th>
-											<th width="5%">#URLs at risk</th>
-											<th width="5%">Average feature value</th>
-											<th width="5%">Average at risk SQ</th>
-											<th width="5%">#URLs healthy</th>			
-											<th width="5%">Average feature value</th>
-											<th width="5%">Average healthy SQ</th>
+											<th width="5%">Mean value (losing URLs)</th> 
+											<th width="5%">Mean value (winning URLs)</th>
+											<th width="5%">Stdev value (losing URLs)</th> 
+											<th width="5%">Stdev value (winning URLs)</th>
+											<th width="5%"># Harmful URLs</th>
+											<th width="5%">Mean value (harmful)</th>
+											<th width="5%">Mean harmful SQ</th>
+											<th width="5%"># Healthy URLs</th>			
+											<th width="5%">Mean value (healthy)</th>
+											<th width="5%">Mean healthy SQ</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -585,14 +587,16 @@ redrawGraph = function(file) {
 										<tr>
 											<th>Influence rank</th>
 											<th>Feature</th>
-											<th>Average losing mean</th> 
-											<th>Average winning mean</th>
-											<th>#URLs at risk</th>
-											<th>Average feature value</th>
-											<th>Average at risk SQ</th>
-											<th>#URLs healthy</th>			
-											<th>Average feature value</th>
-											<th>Average healthy SQ</th>
+											<th>Mean value (losing URLs)</th> 
+											<th>Mean value (winning URLs)</th>
+											<th>Stdev value (losing URLs)</th> 
+											<th>Stdev value (winning URLs)</th>
+											<th># Harmful URLs</th>
+											<th>Mean value (harmful)</th>
+											<th>Mean harmful SQ</th>
+											<th># Healthy URLs</th>			
+											<th>Mean value (healthy)</th>
+											<th>Mean healthy SQ</th>
 										</tr>
 									</tfoot>
 								</table>
@@ -616,14 +620,16 @@ redrawGraph = function(file) {
 							<tr>
 								<th width="5%">Influence rank</th>
 								<th width="55%">Feature</th>
-								<th width="5%">Average losing mean</th> 
-								<th width="5%">Average winning mean</th>
-								<th width="5%">#URLs at risk</th>
-								<th width="5%">Average feature value</th>
-								<th width="5%">Average at risk SQ</th>
-								<th width="5%">#URLs healthy</th>			
-								<th width="5%">Average feature value</th>
-								<th width="5%">Average healthy SQ</th>
+								<th width="5%">Mean value (losing URLs)</th> 
+								<th width="5%">Mean value (winning URLs)</th>
+								<th width="5%">Stdev value (losing URLs)</th> 
+								<th width="5%">Stdev value (winning URLs)</th>
+								<th width="5%"># Harmful URLs</th>
+								<th width="5%">Mean value (harmful)</th>
+								<th width="5%">Mean harmful SQ</th>
+								<th width="5%"># Healthy URLs</th>			
+								<th width="5%">Mean value (healthy)</th>
+								<th width="5%">Mean healthy SQ</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -633,14 +639,16 @@ redrawGraph = function(file) {
 							<tr>
 								<th>Influence rank</th>
 								<th>Feature</th>
-								<th>Average losing mean</th> 
-								<th>Average winning mean</th>
-								<th>#URLs at risk</th>
-								<th>Average feature value</th>
-								<th>Average at risk SQ</th>
-								<th>#URLs healthy</th>			
-								<th>Average feature value</th>
-								<th>Average healthy SQ</th>
+								<th>Mean value (losing URLs)</th> 
+								<th>Mean value (winning URLs)</th>
+								<th>Stdev value (losing URLs)</th> 
+								<th>Stdev value (winning URLs)</th>
+								<th># Harmful URLs</th>
+								<th>Mean value (harmful)</th>
+								<th>Mean harmful SQ</th>
+								<th># Healthy URLs</th>			
+								<th>Mean value (healthy)</th>
+								<th>Mean healthy SQ</th>
 							</tr>
 						</tfoot>
 					</table>
