--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -276,28 +276,28 @@ $(document).ready(function(){
 
 
  
-function sinAndCos() {
-	var sin = [],
-	cos = [];
-
-	for (var i = 0; i < 100; i++) {
-		sin.push({x: i, y: Math.sin(i/10)});
-		cos.push({x: i, y: .5 * Math.cos(i/10)});
-	}
- 
-	return [
-	{
-		values: sin,
-		key: 'Winning Distribution',
-		color: '#00cc00'
-	},
-	{
-		values: cos,
-		key: 'Losing Distribution',
-		color: '#ff0000'
-	}
-	];
-}
+// function sinAndCos() {
+// 	var sin = [],
+// 	cos = [];
+// 
+// 	for (var i = 0; i < 100; i++) {
+// 		sin.push({x: i, y: Math.sin(i/10)});
+// 		cos.push({x: i, y: .5 * Math.cos(i/10)});
+// 	}
+//  
+// 	return [
+// 	{
+// 		values: sin,
+// 		key: 'Winning Distribution',
+// 		color: '#00cc00'
+// 	},
+// 	{
+// 		values: cos,
+// 		key: 'Losing Distribution',
+// 		color: '#ff0000'
+// 	}
+// 	];
+// }
 
 var mu = parseFloat(winMean) || 5;
 var sd = parseFloat(winStd) || 2;
@@ -317,7 +317,7 @@ function normalDist() {
 	iy2 = [];
 	
 	
-	for (var i = ixMin; i < ixMax; i+= ixInc) {
+	for (var i = 0; i < ixMax; i+= ixInc) {
 		
 		iy.push({x: i, y: (1/(sd*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu,2)/(2*Math.pow(sd,2)))});
 		iy2.push({x: i, y: (1/(sd2*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu2,2)/(2*Math.pow(sd2,2)))});
@@ -513,7 +513,7 @@ rel="stylesheet" type="text/css">
 	  
 	  <div class="well">
 		  <h2><script>document.write(healthOrHarm + " links");</script></h2>
-		  <h3><script>document.write("assessed according to feature: "+ featureNameCaps);</script></h3>
+		  <p><script>document.write("assessed according to feature: "+ featureNameCaps);</script></p>
 		  
 
 	  </div>
@@ -609,23 +609,14 @@ rel="stylesheet" type="text/css">
 	  <div id="chart" class='with-3d-shadow with-transitions'>
 		  <svg></svg>
 	  </div>
-	  
-
 
 	  <div class="row-fluid pitch">
 		  <br>
 	  
-		  <h3>Influential Feature Value and Delta to Winning Mean for URL Cluster:</h3>
+		  <h3>Influential Feature Value and Delta to Winning Mean for URL Type:</h3>
 	  
 		  <br>
 
-
-		  <h3>
-			  <script>
-
-			  document.write(featureNameCaps);
-			  </script></h3>
-				  
 		  <div id="dynamic">
 			  <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example1">
 				  <thead>
