updated drilldown title

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -512,10 +512,8 @@ rel="stylesheet" type="text/css">
 	  </div>
 	  
 	  <div class="well">
-		  <h2><script>document.write(healthOrHarm + " links");</script></h2>
+		  <h2><script>document.write(healthOrHarm + " links [" + onOrOffsite + "]");</script></h2>
 		  <p><script>document.write("assessed according to feature: "+ featureNameCaps);</script></p>
-		  
-
 	  </div>
 	  
 	  <br>
