--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -485,11 +485,11 @@ rel="stylesheet" type="text/css">
 	  </div>
 	  
 	  <script>
-
-	  if (parseInt(featInfl)<15) {
+	  console.log('Feature influence level: ' + featInfl)
+	  if (parseInt(featInfl)>15) {
 		  document.write('<div class="panel panel-danger"><p>' + "This feature has a low level of influence" +'</p></div>');
 	  }
-	  else if (parseInt(featInfl)>=15 && featInfl<5) {
+	  else if (parseInt(featInfl)<=15 && featInfl>5) {
 		  document.write('<div class="panel panel-warning"><p>' + "This feature has a moderate level of influence" + '</p></div>');
 	  }
 	  else {
