updated drilldown influence

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -19,6 +19,8 @@
 	<!-- for nv.d3 charts -->
 	<link href="src/nv.d3.css" rel="stylesheet" type="text/css">
 	
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
+	
 	<style>
 	canvas{
 	}
