updated drilldown influence

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -55,6 +55,8 @@
 		height: 500px;
 	}
 
+	@import "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css";
+
 	</style>
 
 	<!-- for datatables -->
