--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -262,10 +262,55 @@ $(document).ready(function(){
 
 });
 
+</script>
+
+<script>
+
+var features = [];
+
+var featureJSON = $.getJSON( "json/features/feature_list.json", function(results) {
+	console.log( "feature JSON loading success" );
+	$.each(results, function(index) {
+		// alert(results[index].name);
+		blob = results[index].name;
+		$.each(blob, function(nameIndex) {
+			features.push(blob[nameIndex]);
+		});
+
+	});
+})
+.done(function() {
+	console.log( "second success" );
+})
+.fail(function() {
+	console.log( "error" );
+})
+.always(function() {
+	console.log( "complete" );
+});
+
+
+featureJSON.complete(function() {
+	console.log( "second complete - populating feature dropdown" );
+	
+	var select = document.getElementById("selectFeat"); 
+	
+	for(var i = 0; i < features.length; i++) {
+		var opt = features[i];
+		var el = document.createElement("option");
+		el.textContent = opt;
+		el.value = opt;
+		select.appendChild(el);
+	}
+	
+	// document.getElementById("jfeatures").innerHTML=features; 						 
+
+});
 
 
 
 </script>
+
 
 <script src="lib/d3.v3.js"></script>
 <script src="assets/js/nv.d3.js"></script>
@@ -505,6 +550,21 @@ rel="stylesheet" type="text/css">
 	  };	  
 	  </script>
  
+	  <br>
+	  
+	<div class="form-group">
+
+		<form id="dropdownFeature">
+			<select id="selectFeat">
+				<option>Select alternative feature</option>
+				<option class="divider">-------------------------</option>
+			</select>
+		</form>
+		
+		<button onclick="doStuff()" type="submit" class="btn btn-primary" id="submitFeat">
+
+	</div><!-- /form-group -->
+	  
 	  <br>
 	  
 	  <div class="panel panel-default">
