updated drilldown feature

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -562,7 +562,9 @@ rel="stylesheet" type="text/css">
 		</form>
 		
 		<button onclick="doStuff()" type="submit" class="btn btn-primary" id="submitFeat">
-
+			submit!
+						  
+		</button>
 	</div><!-- /form-group -->
 	  
 	  <br>
