updated drilldown feature dropdown

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -181,6 +181,7 @@
 				// 	console.log("Winning mean = " + winMean);
 				}
 				else {
+					console.log(blob[1]);
 					iFeatNames.push(blob[1]);
 				}
 	
@@ -526,7 +527,7 @@ rel="stylesheet" type="text/css">
 	  <div class="well">
 		  <h2><script>document.write(healthOrHarm + " links [" + onOrOffsite + "]");</script></h2>
 		  <p><script>document.write("assessed according to feature: "+ featureNameCaps);</script></p>
-		  <hr>
+
 		  <script>
 		  console.log('Feature influence level: ' + featInfl)
 		  if (parseInt(featInfl)>15) {
@@ -539,7 +540,7 @@ rel="stylesheet" type="text/css">
 			  document.write('<div class="panel panel-success"><div class="panel-body"><p>' + "This feature has a high level of influence" + '</p></div></div>');
 		  };	  
 		  </script>
-		  <hr>
+
 		  <br>
 	  
 		  <div class="form-group">
