updated drilldown feature dropdown

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -204,7 +204,7 @@
 		var select = document.getElementById("selectFeat"); 
 		
 		for(var i = 0; i < iFeatNames.length; i++) {
-			console.log(iFeatNames[i])
+			console.log(iFeatNames[i]);
 			var opt = iFeatNames[i];
 			var el = document.createElement("option");
 			el.textContent = opt;
