updated drilldown feature dropdown

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -181,9 +181,9 @@
 				// 	console.log("Winning mean = " + winMean);
 				}
 				else {
-					console.log(blob[1]);
+					console.log('Not same. Feature is: ' + blob[1]);
 					iFeatNames.push(blob[1]);
-				}
+				};
 	
 			});
 		}
