updated drilldown feature dropdown

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -133,7 +133,7 @@
 				featInflus.push(blob[0]);
 
 				if (blob[1]==featureName) {
-					console.log('Same. Feature is: ' + blob[1]);
+					// console.log('Same. Feature is: ' + blob[1]);
 					// 		
 					// console.log(featureName);
 					// 		console.log(blob[1]);
@@ -166,7 +166,7 @@
 				featInflus.push(blob[0]);
 				
 				if (blob[1]==featureName) {
-					console.log('Same. Feature is: ' + blob[1]);
+					// console.log('Same. Feature is: ' + blob[1]);
 					// 		
 					// console.log(featureName);
 					// 		console.log(blob[1]);
@@ -205,7 +205,7 @@
 		console.log( "second complete - populating feature dropdown" );
 		
 		var select = document.getElementById("selectFeat"); 
-		
+		console.log('Length of iFeatNames = '+ iFeatNames.length);
 		for(var i = 0; i < iFeatNames.length; i++) {
 			console.log(iFeatNames[i]);
 			var opt = iFeatNames[i];
