--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -226,13 +226,13 @@
 	function doStuff()
 	{
 	
-		alert("page type is " + pageType);
+		// alert("page type is " + onOrOffsite);
 	
 		var featureX = document.getElementById("selectFeat").selectedIndex;
 		var featureY = document.getElementById("selectFeat").options;
 		var featureSel = featureY[featureX].text.toLowerCase();
 	
-		alert("feature selection is " + featureSel);
+		// alert("feature selection is " + featureSel);
 
 		if (websiteName.length > 0 && featureSel.length > 0 && onOrOffsite.length > 0 && featureX > 1){
 			urlToOpen = "SQ_drilldown.html?="+websiteName+"&="+featureSel+"&="+onOrOffsite;
